# nostale_discord_bot

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md  todo.md
configs/: config.yaml  events.yaml
headers/: bot.hpp  config.hpp  enums.hpp  event.hpp  listeners.hpp
headers/configs/: config.hpp  config_entry.hpp
headers/events/: event.hpp
headers/logger/: logger.hpp
headers/rss_feed/: rss_event.hpp  rss_feed.hpp
headers/utils/: time.hpp
sources/: bot.cpp  config.cpp  event.cpp  events.cpp
sources/configs/: config.cpp
sources/events/: asgobas_instant_combat.cpp  event.cpp  instant_combat.cpp  land_of_death.cpp  land_of_life.cpp
sources/listeners/: member_update.cpp
sources/rss_feed/: rss_event.cpp  rss_feed.cpp
tests/: events.cpp  rss_feed.cpp
